--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.jpg" class="img-fluid" alt="iş merkezi yönetimi"
+            <img src="is-merkezi/referanslar/Ahmet-Urgancı-Cephe.jpg" class="img-fluid" alt="iş merkezi yönetimi"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Ahmet Urgancı İş Merkezi - Güngören</h4>
@@ -371,7 +371,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Alper İş Merkezi.jpg" class="img-fluid" alt="iş merkezi yönetim firması"
+            <img src="is-merkezi/referanslar/Alper İş Merkezi.jpg" class="img-fluid" alt="iş merkezi yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Alper İş Merkezi - Beşiktaş</h4>
@@ -382,7 +382,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Savaş.jpg" class="img-fluid" alt="iş merkezi yönetimi şirketi"
+            <img src="is-merkezi/referanslar/Savaş.jpg" class="img-fluid" alt="iş merkezi yönetimi şirketi"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Savaş İş Merkezi - Bahçelievler</h4>
@@ -397,13 +397,13 @@
             <div class="portfolio-info">
               <h4>Raftoz Argun Sitesi - Bahçelievler</h4>
               <p></p>
-              <a href="assets/img/portfolio/RAFTOZ ARGUN.jpg" data-gallery="portfolioGallery"
+              <a href="site-yonetimi/referanslar/RAFTOZ ARGUN.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Raftoz Argun Sitesi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ozerapt.jpg" class="img-fluid" alt="esenyurt bina yönetim firması"
+            <img src="/apartman-yonetimi/referanslar/ozerapt.jpg" class="img-fluid" alt="esenyurt bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Özer Apartmanı - Esenyurt</h4>
@@ -414,8 +414,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BEYAZSARAY.jpg" class="img-fluid" alt="esenyurt bina yönetimi firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/BEYAZSARAY.jpg" class="img-fluid"
+              alt="esenyurt bina yönetimi firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Beyaz Saray Apartmanı - Esenyurt</h4>
               <p></p>
@@ -425,8 +425,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/LİMANOĞLU.jpg" class="img-fluid" alt="küçükçekmece apartman yönetim şirketi"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/LİMANOĞLU.jpg" class="img-fluid"
+              alt="küçükçekmece apartman yönetim şirketi" loading="lazy">
             <div class="portfolio-info">
               <h4>Limanoğlu Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -436,7 +436,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Yaşar Apartmanı.jpg" class="img-fluid"
+            <img src="/apartman-yonetimi/referanslar/Yaşar Apartmanı.jpg" class="img-fluid"
               alt="küçükçekmece bina yönetimi firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Yaşar Apartmanı - Küçükçekmece</h4>
@@ -447,7 +447,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/bengisuevleri.jpg" class="img-fluid" alt="bina yönetim firması"
+            <img src="/apartman-yonetimi/referanslar/bengisuevleri.jpg" class="img-fluid" alt="bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Bengisu Evleri B Blok - Kağıthane</h4>
@@ -458,8 +458,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARACAOĞLU.jpg" class="img-fluid" alt="kağıthane bina yönetimi firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/KARACAOĞLU.jpg" class="img-fluid"
+              alt="kağıthane bina yönetimi firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Karacaoğlu Apartmanı - Kağıthane</h4>
               <p></p>
@@ -469,8 +469,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Salihzekiapt.jpg" class="img-fluid" alt="beyoğlu bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/Salihzekiapt.jpg" class="img-fluid"
+              alt="beyoğlu bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Salih Zeki Apartmanı - Beyoğlu</h4>
               <p></p>
@@ -480,7 +480,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/hilal apartmanı.jpg" class="img-fluid"
+            <img src="/apartman-yonetimi/referanslar/hilal apartmanı.jpg" class="img-fluid"
               alt="küçükçekmece bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Hilal Apartmanı - Küçükçekmece</h4>
@@ -491,8 +491,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kılıçlar Apartmanı.jpg" class="img-fluid" alt="esenyurt bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/Kılıçlar Apartmanı.jpg" class="img-fluid"
+              alt="esenyurt bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Kılıçlar Apartmanı - Esenyurt</h4>
               <p></p>
@@ -502,8 +502,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/aysehanım.jpg" class="img-fluid" alt="kağıthane bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/aysehanım.jpg" class="img-fluid"
+              alt="kağıthane bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Ayşe Hanım Apartmanı - Kağıthane</h4>
               <p></p>
@@ -513,7 +513,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/özdağ.jpg" class="img-fluid" alt="Avcılar bina yönetim firması"
+            <img src="/apartman-yonetimi/referanslar/özdağ.jpg" class="img-fluid" alt="Avcılar bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Özdağ Apartmanı - Avcılar</h4>
@@ -524,7 +524,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/İMTAŞ.jpg" class="img-fluid" alt="kağıthane bina yönetim firması"
+            <img src="/apartman-yonetimi/referanslar/İMTAŞ.jpg" class="img-fluid" alt="kağıthane bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>İmtaş Apartmanı - Kağıthane</h4>
@@ -535,8 +535,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Tenten.jpg" class="img-fluid" alt="küçükçekmece bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/Tenten.jpg" class="img-fluid"
+              alt="küçükçekmece bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Tenten Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -546,8 +546,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.jpg" class="img-fluid" alt="esenyurt bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/ÇAKMAK APARTMANI.jpg" class="img-fluid"
+              alt="esenyurt bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Çakmak Apartmanı - Esenyurt</h4>
               <p></p>
@@ -557,8 +557,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/GÜL APARTMANI.jpg" class="img-fluid" alt="küçükçekmece bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/GÜL APARTMANI.jpg" class="img-fluid"
+              alt="küçükçekmece bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Gül Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -568,7 +568,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kızılay.jpg" class="img-fluid" alt="şişli bina yönetim firması"
+            <img src="/apartman-yonetimi/referanslar/Kızılay.jpg" class="img-fluid" alt="şişli bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Kızılay Apartmanı - Şişli</h4>
@@ -580,8 +580,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/yıldızapartmanı.jpg" class="img-fluid" alt="avcılar bina yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/yıldızapartmanı.jpg" class="img-fluid"
+              alt="avcılar bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Yıldız Apartmanı - Avcılar</h4>
               <p></p>
@@ -591,7 +591,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARANFİL APARTMANI.jpg" class="img-fluid"
+            <img src="/apartman-yonetimi/referanslar/KARANFİL APARTMANI.jpg" class="img-fluid"
               alt="kağıthane apartman yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Karanfil Apartmanı - Kağıthane</h4>
@@ -602,7 +602,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BİRLİK APARTMANI.jpg" class="img-fluid"
+            <img src="/apartman-yonetimi/referanslar/BİRLİK APARTMANI.jpg" class="img-fluid"
               alt="bahçelievler apartman yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Birlik Apartmanı - Bahçelievler</h4>
@@ -613,8 +613,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KEREM APARTMANI.jpg" class="img-fluid" alt="şişli apartman yönetim firması"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/KEREM APARTMANI.jpg" class="img-fluid"
+              alt="şişli apartman yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Kerem Apartmanı - Şişli</h4>
               <p></p>
@@ -624,7 +624,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/alaraapartmani.jpg" class="img-fluid" loading="lazy"
+            <img src="/apartman-yonetimi/referanslar/alaraapartmani.jpg" class="img-fluid" loading="lazy"
               alt="apartman yönetim firması">
             <div class="portfolio-info">
               <h4>Alara Apartmanı - Esenyurt</h4>
@@ -635,8 +635,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="küçükçekmece apartman yönetimi"
-              loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/güney inci.jpg" class="img-fluid"
+              alt="küçükçekmece apartman yönetimi" loading="lazy">
             <div class="portfolio-info">
               <h4>Güney İnci Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -646,7 +646,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="esenyurt apartman yönetimi"
+            <img src="/apartman-yonetimi/referanslar/günes.jpeg" class="img-fluid" alt="esenyurt apartman yönetimi"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Güneş Apartmanı - Esenyurt</h4>
