--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog - Tempo Bootstrap Template</title>
-  <meta name="description"
+  <title>Profesyonel Apartman Yönetimi Şirketi Blog</title>
+  <meta name="description" content="apartman yönetimi nasıl yapılır, aidat nasıl toplanır">
+  <meta name="keywords"
     content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
-  <meta name="keywords" content="apartman yönetimi nasıl yapılır, aidat nasıl toplanır">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
