--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Profesyonel Apartman Yönetim Şirketi</title>
 
-  <link rel="canonical" href="https://www.pargayonetim.com/" />
+  <!-- <link rel="canonical" href="https://www.pargayonetim.com/" /> -->
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JSMMXR6B8S"></script>
