--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
   <title>Profesyonel Apartman Yönetim Şirketi</title>
@@ -24,7 +24,7 @@
   <meta name="keywords"
     content="apartman yönetimi, apartman yönetimi firmaları, bina yönetimi firmaları, apartman yönetim şirketi">
   <meta name="page-topic" content="trade">
-  <meta http-equiv="Content-Language" content="tr">
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/favicon.png" rel="icon">
