--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,14 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Profesyonel Apartman Yönetimi Şirketi Blog</title>
-  <meta name="description" content="apartman yönetimi nasıl yapılır, aidat nasıl toplanır">
+  <meta name="description"
+    content="apartman yönetimi nasıl yapılır, aidat nasıl toplanır, yönetici nasıl seçilir, demirbaş ödemeleri kime ait">
   <meta name="keywords"
     content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
