--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <a class="cta-btn" href="#">Call To Action</a> -->
       </div>
 
-      </div>
+
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -731,7 +731,7 @@
 
       </div>
 
-      </div>
+
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
@@ -946,7 +946,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/profile-pic.png" class="img-fluid" alt=Mert Denizman" loading="lazy">
+                <img src="assets/img/team/profile-pic.png" class="img-fluid" alt="Mert Denizman" loading="lazy">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1040,7 +1040,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <section id="team2" class="team">
       <div class="container">
 
         <div class="section-title">
