--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
     <link href="assets/img/favicon.png" rel="icon">
 
     <!-- Google Fonts -->
+    <link href="assets/css/style.css" rel="stylesheet">
 
 
     <!-- Template Main CSS File -->
@@ -27,7 +28,31 @@
 </head>
 
 <body>
-    404
+    <section class="page_404">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 ">
+                    <div class="col-sm-10 col-sm-offset-1  text-center">
+                        <div class="four_zero_four_bg">
+                            <h1 class="text-center ">404</h1>
+
+
+                        </div>
+
+                        <div class="contant_box_404">
+                            <h3 class="h2">
+                                Look like you're lost
+                            </h3>
+
+                            <p>the page you are looking for not avaible!</p>
+
+                            <a href="" class="link_404">Go to Home</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
