--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
   <meta name="keywords"
     content="apartman yönetimi, apartman yönetimi firmaları, bina yönetimi firmaları, apartman yönetim şirketi">
-  <meta name="page-topic" content="trade">
+  <meta name="page-topic" content="service">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -1175,12 +1175,14 @@
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Lokasyonumuz:</h4>
-                <p>19 Mayıs mahallesi, <br>
-                  Halaskargazi Cd. <br>
-                  No: 226 / 24, 34360
-                  Şişli / İstanbul</p>
+                <i class="bi bi-geo-alt"></i> <a
+                  href="https://www.google.com/maps/place/Parga+Apartman+ve+Site+Y%C3%B6netimi/@41.0608011,28.9881125,15z/data=!4m2!3m1!1s0x0:0xb4a63510b4eee873?sa=X&ved=2ahUKEwjS8bej_8eEAxXbavEDHaZdDCoQ_BJ6BAg9EAA">
+                  <h4>Lokasyonumuz:</h4>
+                  <p>19 Mayıs mahallesi, <br>
+                    Halaskargazi Cd. <br>
+                    No: 226 / 24, 34360
+                    Şişli / İstanbul</p>
+                </a>
               </div>
               <a href=""></a>
               <div class="email">
@@ -1247,15 +1249,17 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Parga Yönetim</h3>
-            <p>19 Mayıs mahallesi, <br> Halaskargazi Cd. <br>
-              No: 226 / 24, 34360
-              <br>
+          <div class="col-lg-3 col-md-6 footer-contact"><a
+              href="https://www.google.com/maps/place/Parga+Apartman+ve+Site+Y%C3%B6netimi/@41.0608011,28.9881125,15z/data=!4m2!3m1!1s0x0:0xb4a63510b4eee873?sa=X&ved=2ahUKEwjS8bej_8eEAxXbavEDHaZdDCoQ_BJ6BAg9EAA">
+              <h3>Parga Yönetim</h3>
+              <p>19 Mayıs mahallesi, <br> Halaskargazi Cd. <br>
+                No: 226 / 24, 34360
+                <br>
 
-              Şişli / İstanbul <br><br>
-              <strong>Telefon:</strong> <a href="tel:+905467620002">0546 762 00 02</a> <br>
-              <strong>Email: </strong><a href="mailto:info@pargayonetim.com">info@pargayonetim.com</a> <br>
+                Şişli / İstanbul <br><br>
+            </a>
+            <strong>Telefon:</strong> <a href="tel:+905467620002">0546 762 00 02</a> <br>
+            <strong>Email: </strong><a href="mailto:info@pargayonetim.com">info@pargayonetim.com</a> <br>
             </p>
           </div>
 
