--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="description"
     content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
   <meta name="keywords"
-    content="apartman yönetimi, apartman yönetimi firmaları, bina yönetimi firmaları, apartman yönetim şirketi">
+    content="apartman yönetimi, apartman yönetimi firmaları, bina yönetimi firmaları, apartman yönetim şirketi, bina yönetimi, site yönetimi">
   <meta name="page-topic" content="service">
 
   <!-- Favicons -->
@@ -57,7 +57,7 @@
 
 
 <body>
-
+  <!-- oncontextmenu="return false" -->
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
@@ -1166,8 +1166,8 @@
         <div>
           <iframe style="border:0; width: 100%; height: 270px;  "
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.498871932918!2d28.98811250000001!3d41.0608011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4a63510b4eee873!2sParga%20Site%20ve%20Tesis%20Y%C3%B6netimi!5e0!3m2!1str!2str!4v1672243090483!5m2!1str!2str"
-            width="600" height="450" style="border:0;" allowfullscreen="true" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade" name="google"></iframe>
+            width="600" height="450" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+            name="google"></iframe>
         </div>
 
         <div class="row mt-5">
@@ -1303,21 +1303,21 @@
         <div class="copyright">
           &copy; Copyright <strong><span>Parga Yönetim</span></strong>. All Rights Reserved.
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-          <a href=> </a>
-        </div>
+        <!-- <div class="credits"> -->
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
+        <!-- <a href=> </a> -->
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#contact" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#contact" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/pargayonetim/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#contact" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+    </div>
+    <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      <a href="#contact" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="#contact" class="facebook"><i class="bx bxl-facebook"></i></a>
+      <a href="https://www.instagram.com/pargayonetim/" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="#contact" class="google-plus"><i class="bx bxl-skype"></i></a>
+      <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+    </div>
     </div>
   </footer><!-- End Footer -->
 
@@ -1333,7 +1333,30 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <!-- <script> document.onkeypress = function (event)
+    {
+      event = (event || window.event);
+      if (event.keyCode == 123)
+      {
+        return false;
+      }
+    }
+    document.onmousedown = function (event)
+    {
+      event = (event || window.event);
+      if (event.keyCode == 123)
+      {
+        return false;
+      }
+    }
+    document.onkeydown = function (event)
+    {
+      event = (event || window.event);
+      if (event.keyCode == 123)
+      {
+        return false;
+      }
+    }</script> -->
 </body>
 
 </html>
