--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/KARADAĞ ELEKTRİK.png" class="img-fluid" alt="Apartman yönetimi firması"
@@ -1106,7 +1106,7 @@
                 <span>Elektrik ve Mühendislik</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
@@ -1244,7 +1244,13 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
+    <div class="phone-call cbh-phone cbh-green cbh-show  cbh-static" id="clbh_phone_div" style=""><a
+        id="WhatsApp-button" href="https://wa.me/5521980619913" target="_blank" class="phoneJs"
+        title="WhatsApp 360imagem">
+        <div class="cbh-ph-circle"></div>
+        <div class="cbh-ph-circle-fill"></div>
+        <div class="cbh-ph-img-circle1"></div>
+      </a></div>
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -1323,6 +1329,8 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
+
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
