--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li><a class="nav-link scrollto" href="#services">Hizmetlerimiz</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Referanslarımız</a></li>
           <li><a class="nav-link scrollto" href="#team">Takımımız</a></li>
-          <!-- <li><a href="www.pargayonetim.com">Blog</a></li> -->
+          <!-- <li><a href="/blog/apartman-nasil-yönetilir.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -104,7 +104,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="home">
-    <div class="hero-container">
+    <div class="hero-container" link rel="preload">
 
       <h1>Profesyonel Apartman Yönetim Şirketi ve Site Yönetimi
       </h1>
@@ -113,7 +113,8 @@
         uygun fiyata
         sunuyoruz</h2>
 
-      <h2> <a class="a" href="#sss"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca çözüyoruz ve
+      <h2> <a class="a" href="#sss" link rel="preload"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca
+            çözüyoruz ve
             şirket
             olarak karşılıyoruz</strong>
         </a></h2>
