--- a/index.html
+++ b/index.html
@@ -659,6 +659,18 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/karadeniz (1).jpg" class="img-fluid" alt="eyüp apartman yönetimi"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Karadeniz Apartmanı - Eyüp</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/karadeniz (1).jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Karadeniz Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
