--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
   <!-- oncontextmenu="return false" -->
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
-    <div class="container d-flex align-items-center justify-content-between">
 
-      <h2 class="logo"><a href="#home">PARGA YÖNETİM</a></h2>
+
+
+
+
+    <div class="container d-flex align-items-center justify-content-between">
       <h2 class="logo"><a href="tel:+905467620002">0546 762 00 02</a></h2>
 
 
@@ -76,6 +79,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
+        <div class="logo2"><img src="/pargalogo.png" height=""></img></div>
         <ul>
           <li><a class="nav-link scrollto active" href="#home">Anasayfa</a></li>
           <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
