--- a/index.html
+++ b/index.html
@@ -1267,9 +1267,8 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="phone-call cbh-phone cbh-green cbh-show  cbh-static" id="clbh_phone_div" style=""><a
-        id="WhatsApp-button" href="https://wa.me/905467620002" target="_blank" class="phoneJs"
-        title="WhatsApp 360imagem">
+    <div class="phone-call cbh-phone cbh-green cbh-show  cbh-static" id="clbh_phone_div"><a id="WhatsApp-button"
+        href="https://wa.me/905467620002" target="_blank" class="phoneJs" title="WhatsApp 360imagem">
         <div class="cbh-ph-circle"></div>
         <div class="cbh-ph-circle-fill"></div>
         <div class="cbh-ph-img-circle1"></div>
