--- a/index.html
+++ b/index.html
@@ -973,10 +973,10 @@
               <div class="member-img">
                 <img src="assets/img/team/profile-pic.png" class="img-fluid" alt="Mert Denizman" loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -991,10 +991,10 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="Furkan Denizman" loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1009,10 +1009,10 @@
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="İrfan Denizman" loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1027,10 +1027,10 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="Sema H." loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1081,10 +1081,10 @@
                 <img src="assets/img/team/fakhani.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1099,10 +1099,10 @@
               <div class="member-img">
                 <img src="assets/img/team/3k.jpg" class="img-fluid" alt="bina yönetimi firması" loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1137,10 +1137,10 @@
                 <img src="assets/img/team/apsiyon-site.jpeg" class="img-fluid" alt="Apartman Yönetimi Dijital Asistanı"
                   loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a><i class="bi bi-twitter"></i></a>
+                  <a><i class="bi bi-facebook"></i></a>
+                  <a><i class="bi bi-instagram"></i></a>
+                  <a><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1295,20 +1295,20 @@
             <h4>Hakkımızda</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Anasayfa</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Biz kimiz?</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Hizmetlerimiz</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Kullanım şartları</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Gizlilik politikası</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">Biz kimiz?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Hizmetlerimiz</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Kullanım şartları</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Gizlilik politikası</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Sunduğumuz hizmetler</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Apartman ve Site Yönetimi</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Muhasebe</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Hukuk</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Temizlik</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Apartman ve Site Yönetimi</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Muhasebe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Hukuk</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Temizlik</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
